--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,10 @@ body {
 }
 
 .logo img {
-  width: 40%;
+  width: 50%;
 }
 
-.menu {
+nav {
   position: absolute;
   top: 50%;
   left: 4%;
@@ -33,17 +33,73 @@ body {
   transform: translate(-50%, -50%) rotate(-90deg);
 }
 
-.menu li {
+nav li {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-.menu ul li{
+nav ul li {
   font-family: arial black;
-  font-size: 13px;
+  font-size: 16px;
   color: #fff;
   display: inline-block;
   margin: 0 20px;
   cursor: pointer;
+}
+
+.social__media {
+  position: absolute;
+  top: 50%;
+  right: 3.5%;
+  transform: translateY(-50%);
+}
+
+.social__media ul img {
+  width: 36px;
+  height: 36px;
+}
+
+.social__media ul {
+  list-style: none;
+  padding: 0px;
+  margin: 0;
+}
+
+.social__media li {
+  margin: 20px 0px;
+  cursor: pointer;
+}
+
+.info {
+  width: 26%;
+  font-family: arial;
+  font-size: 20px;
+  color:#fff;
+  text-align: center;
+  position: absolute;
+  bottom: 3%;
+  left: 50%;
+  transform: translateX(-50%);
+  letter-spacing: 8px;
+}
+.btn{
+  height: 35px;
+  width: 150px;
+  background: #f87060;
+  font-family: arial;
+  font-size: 12px;
+  color:white;
+  text-align: center;
+  line-height: 35px;
+  border-radius: 20px;
+  position: absolute;
+  bottom: 15%;
+  left: 50%;
+  transform: translateX(-50%);
+  cursor: pointer;
+}
+.info span{
+  color:#f87060;
+  font-size: 25px;
 }
