--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
+/* Specification */
 body {
   padding: 0;
   margin: 0;
   background-color: #161616;
 }
 
+/* Beginning main background section */
 .img__main {
   height: 78%;
   width: 85%;
@@ -24,7 +26,9 @@ body {
 .logo img {
   width: 50%;
 }
+/* End of main background section */
 
+/* Beginning navigation section (left) */
 nav {
   position: absolute;
   top: 50%;
@@ -47,6 +51,7 @@ nav ul li {
   margin: 0 20px;
   cursor: pointer;
 }
+/* End of  navigation section (left) */
 
 .social__media {
   position: absolute;
@@ -70,12 +75,14 @@ nav ul li {
   margin: 20px 0px;
   cursor: pointer;
 }
+/* End of social-media section (right) */
 
+/* Beginning info section (slogon) */
 .info {
   width: 26%;
   font-family: arial;
   font-size: 20px;
-  color:#fff;
+  color: #fff;
   text-align: center;
   position: absolute;
   bottom: 3%;
@@ -83,13 +90,21 @@ nav ul li {
   transform: translateX(-50%);
   letter-spacing: 8px;
 }
-.btn{
+
+.info span {
+  color: #f87060;
+  font-size: 25px;
+}
+/* End of slogon section */
+
+/* btn */
+.btn {
   height: 35px;
   width: 150px;
   background: #f87060;
   font-family: arial;
   font-size: 12px;
-  color:white;
+  color: white;
   text-align: center;
   line-height: 35px;
   border-radius: 20px;
@@ -98,8 +113,4 @@ nav ul li {
   left: 50%;
   transform: translateX(-50%);
   cursor: pointer;
-}
-.info span{
-  color:#f87060;
-  font-size: 25px;
 }
