--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* Specification */
+
 body {
   padding: 0;
   margin: 0;
@@ -6,6 +7,7 @@ body {
 }
 
 /* Beginning main background section */
+
 .img__main {
   height: 78%;
   width: 85%;
@@ -26,9 +28,11 @@ body {
 .logo img {
   width: 50%;
 }
+
 /* End of main background section */
 
 /* Beginning navigation section (left) */
+
 nav {
   position: absolute;
   top: 50%;
@@ -51,6 +55,12 @@ nav ul li {
   margin: 0 20px;
   cursor: pointer;
 }
+
+nav ul li:hover {
+  color: #F78763;
+  transition: .5s;
+}
+
 /* End of  navigation section (left) */
 
 .social__media {
@@ -65,6 +75,11 @@ nav ul li {
   height: 36px;
 }
 
+.social__media ul img:hover {
+  background-color:#F78763;
+  transition: .5s;
+}
+
 .social__media ul {
   list-style: none;
   padding: 0px;
@@ -75,9 +90,11 @@ nav ul li {
   margin: 20px 0px;
   cursor: pointer;
 }
+
 /* End of social-media section (right) */
 
 /* Beginning info section (slogon) */
+
 .info {
   width: 26%;
   font-family: arial;
@@ -95,15 +112,17 @@ nav ul li {
   color: #f87060;
   font-size: 25px;
 }
+
 /* End of slogon section */
 
 /* btn */
+
 .btn {
   height: 35px;
   width: 150px;
   background: #f87060;
   font-family: arial;
-  font-size: 12px;
+  font-size: 15px;
   color: white;
   text-align: center;
   line-height: 35px;
@@ -113,4 +132,9 @@ nav ul li {
   left: 50%;
   transform: translateX(-50%);
   cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #f7595a;
+  transition: .5s ease;
 }
